--- a/samples/sample1/index.html
+++ b/samples/sample1/index.html
@@ -27,10 +27,10 @@
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
-    <script src="https://daniles.github.io/d-n-d-webflow/src/v0.1.1/dragdealer.js"></script>
-    <script src="https://daniles.github.io/d-n-d-webflow/src/v0.1.1/d-n-d-webflow.js"></script>
+    <script src="https://daniles.github.io/d-n-d-webflow/src/v0.1.2/dragdealer.js"></script>
+    <script src="https://daniles.github.io/d-n-d-webflow/src/v0.1.2/d-n-d-webflow.js"></script>
     <script>
-    InitDNDWebflow('just-a-slider', '.d-n-d-fake');
+    InitDNDWebflow('just-a-slider', '.d-n-d-fake', true);
     </script>
   </body>
 </html>
